Fourth fix for the magical world of crumbs and text-overflow
Summary: The Safari hack in place casued a truncation issue in Firefox, so that hack is now gone. Instead the bug appears to be the creative inclusion of "space". In fiddling with this adding one space inside the span and one space outside the span seems to resolve all cases.

Test Plan: Chrome, Safari, Firefox. Test "hector" and copy paste of a Task ID.

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: Korvin

Differential Revision: https://secure.phabricator.com/D17483

--- a/webroot/rsrc/css/phui/phui-crumbs-view.css
+++ b/webroot/rsrc/css/phui/phui-crumbs-view.css
@@ -54,13 +54,6 @@
   text-overflow: ellipsis;
 }
 
-/* Safari Hack, See D17361 */
-.phui-crumb-view:after {
-  content: "\0000a0";
-  display: inline-block;
-  width: 0;
-}
-
 .device-phone .phui-crumb-view.phabricator-last-crumb .phui-crumb-name,
 .device-phone .phui-crumb-view.phui-crumb-has-icon,
 .device-phone .phui-crumb-has-icon + .phui-crumb-divider {
